Changes in HTML templates and backend.py

--- a/templates/trade.html
+++ b/templates/trade.html
@@ -22,6 +22,7 @@
         Kursy średnie walut obcych - tabela A</a><br>
         <a href="{{ url_for('trade') }}" class="link-secondary">Przelicznik walut</a><br>
         <a href="{{ url_for('comparison') }}" class="link-secondary">Porównanie walut</a><br>
+        <a href="{{ url_for('plot') }}" class="link-secondary">Wykresy</a><br>
     </p>
  
     <form action="{{ url_for('trade') }}" method="post">
