--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,8 @@
         <a href="{{ url_for('table') }}" class="link-secondary">
         Kursy średnie walut obcych - tabela A</a><br>
         <a href="{{ url_for('trade') }}" class="link-secondary">Przelicznik walut</a><br>
-        <a href="{{ url_for('comparison') }}" class="link-secondary">Porównanie walut</a><br><br>
+        <a href="{{ url_for('comparison') }}" class="link-secondary">Porównanie walut</a><br>
+        <a href="{{ url_for('plot') }}" class="link-secondary">Wykresy</a><br><br>
         <a href="https://www.nbp.pl/" class="link-secondary">Narodowy Bank Polski</a><br>
 
     </p>
@@ -65,6 +66,5 @@ Oprócz działalności studencko-akademickiej interesuję się sportem (bieganie
     <a href="https://github.com/filrat2" target="_blank" title="GitHub"><img src="{{url_for('static', filename='github-mark.png')}}" style="width:60px"/></a>
     <a href="https://gitlab.portal.futurecollars.com/filip_ratajszczak" target="_blank" title="GitLab"><img src="{{url_for('static', filename='gitlab-logo-500.png')}}" style="width:90px"/></a>
     <a href="https://www.instagram.com/ratajszcza.k/" target="_blank" title="Instagram"><img src="{{url_for('static', filename='Instagram_logo_2022.png')}}" style="width:60px"/></a>
-    
 </body>
 </html>
