--- a/templates/plot.html
+++ b/templates/plot.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela kursów</title>
+    <title>Wykresy</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    
+    <style>
+        p {
+        margin: 50px 50px;
+        }
+        form {
+        margin-left: 50px;
+        }
+        h3 {
+        margin-left: 50px;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,11 +28,17 @@
         Kursy średnie walut obcych - tabela A</a><br>
         <a href="{{ url_for('trade') }}" class="link-secondary">Przelicznik walut</a><br>
         <a href="{{ url_for('comparison') }}" class="link-secondary">Porównanie walut</a><br>
+        <a href="{{ url_for('plot') }}" class="link-secondary">Wykresy</a><br>
     </p>
+    
+    {% if not currency%}
+    {% else %}
+    <h3>Wykres dla waluty {{ currency['code'] }} ({{ currency['name'] }})</h3>
+    {% endif %}
     
     
     <div id='chart' class='chart'”></div>
-  
+    
     <form action="{{ url_for('plot') }}" method="post">
         <label for="currency">Waluta</label><br>
         <select name="currency" id="currency">
