--- a/templates/table.html
+++ b/templates/table.html
@@ -12,6 +12,9 @@
          body {
          margin: 50px;
          }
+         th, td {
+         padding: 10px;
+         }
      </style>
 </head>
 
@@ -35,7 +38,7 @@
         <tr>               
             <td>{{ Currency.name }}</td>
             <td>{{ Currency.code }}</td>
-            <td>{{ CurrencyDayMidRate.mid_rate }}</td>                                 
+            <td>{{ CurrencyDayMidRate.mid_rate }}</td>
         </tr>
         {% endfor %}   
     </table>
