--- a/templates/index.html
+++ b/templates/index.html
@@ -37,15 +37,13 @@
 
     </p>
     
-    <h4>Projekt końcowy wykonany na potrzeby zaliczenia kursu Python Developer w Future Collars.</h4>
+    <h4>Projekt końcowy wykonany na potrzeby zaliczenia kursu Python Developer w <a href="https://futurecollars.com/" class="link-secondary">Future Collars</a>.</h4>
+    <a href="https://futurecollars.com/" target="_blank" title="Future Collars"><img src="{{url_for('static', filename='fc-logo.svg')}}" style="width:100px"/></a><br><br>
     <p>Projekt umożliwia pobranie danych o kursach walut z <a href="http://api.nbp.pl/" class="link-secondary">NBP Web API</a> oraz wykonywanie kilku operacji na pobranych danych:<br><br>
     &bull; wymianę (przeliczanie) walut (kalkulator, konwerter walut),<br>
     &bull; porównywanie kursów walut, <br>
     &bull; generowanie wykresów szeregów czasowych,<br>
     &bull; wyświetlanie <a href="https://www.nbp.pl/kursy/kursya.html" class="link-secondary">Kursów średnich walut obcych - Tabeli A</a> z <a href="https://www.nbp.pl/" class="link-secondary">Narodowego Banku Polskiego</a><br>
-    </p>
-    
-    <a href="https://futurecollars.com/" target="_blank" title="Future Collars"><img src="{{url_for('static', filename='fc-logo.svg')}}" style="width:100px"/></a>
     </p>
     
     <h4>O mnie</h4>
